--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -1,7 +1,6 @@
 /* 웹폰트 */
 @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
 
-
 /* 여백 초기화 */
 * {
     margin: 0;
@@ -10,43 +9,54 @@
     font-size: 16px;
     line-height: 1.6;
 }
+
 /* 링크 초기화 */
 a {
     text-decoration: none;
     color: #222;
 }
+
 /* 목록 초기화 */
 li {
     list-style: none;
 }
+
+/* 제목 초기화 */
+h1, h2, h3, h4, h5, h6 {
+    font-weight: normal;
+}
+
 /* 모든 페이지 레이아웃 */
 body {
     padding: 40px;
 }
-/* 제목초기화 */
-h1h2h3h4h5 {
-
-}
 #header {
-    border-bottom: 1px dashed #DCDCDC;
+    border-bottom: 1px dashed #dcdcdc;
     padding-bottom: 40px;
 }
 #main {
     padding: 40px 0;
-    border-bottom: 1px dashed #DCDCDC;
+    border-bottom: 1px dashed #dcdcdc;
 }
 #footer {
     padding: 40px 0;
     text-align: center;
 }
-#foot :hover
+#footer a:hover {
+    text-decoration: underline;
+}
 
-/* 헤더영역 */
-#header h1 {
+/* 헤더 영역 */
+#header h1 a {
     font-size: 60px;
+    font-weight: 700;
 }
 .header_nav ul li {
     display: inline;
+}
+.header_nav ul li.active a {
+    background-color: #000;
+    color: #fff;
 }
 .header_nav ul li a {
     border: 1px solid #222;
@@ -54,11 +64,7 @@ h1h2h3h4h5 {
     display: inline-block;
     margin-bottom: 7px;
 }
-.header_nav ul li .active .a {
-
-}
-
-.header_nav ul li :hover {
+.header_nav ul li a:hover {
     background-color: #000;
     color: #fff;
 }
@@ -69,31 +75,86 @@ h1h2h3h4h5 {
     border-radius: 50px;
     padding: 6px 30px;
     background-color: #000;
-    color:#fff;
+    color: #fff;
 }
-/* 메인샘플 */
-.main_sample{
+
+/* 메인 샘플 */
+.main_sample {
     margin-top: 40px;
     border-top: 1px dashed #dcdcdc;
     padding-top: 40px;
 }
-.main_sample h3{
+.main_sample h3 {
     font-size: 18px;
     margin-bottom: 5px;
-}
-.main_sample .script{
+} 
+.main_sample p {
     margin-bottom: 10px;
     color: #666;
 }
-.main_sample.script{
-
-}
-.main_sample .result{
+.main_sample .result {
     margin-bottom: 80px;
 }
 
-@media(max-width:800px){
-    body{
+/* 티스토리용 문서 */
+.document {
+
+}
+.document em {
+    font-style: normal;
+    position: relative;
+}
+.document em::before {
+    content: '';
+    background-color: #0242f136;
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-radius: 20px;
+}
+.document .t_tit {
+    font-size: 30px;
+    line-height: 1.6;
+    margin-bottom: 5px;
+    font-weight: 400;
+}
+.document .t_tit2 {
+    font-size: 22px;
+    line-height: 1.6;
+    margin-top: 50px;
+    margin-bottom: 5px;
+    font-weight: 400;
+}
+.document .t_tit3 {
+    font-size: 16px;
+    line-height: 1.6;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-weight: 400;
+}
+.document .t_desc {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #666;
+    margin-bottom: 10px;
+}
+.document .t_desc2 {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #666;
+    margin-bottom: 10px;
+    padding: 20px !important;
+    border-left: 4px solid #0243f1;
+    background-color: #f9f9f9;
+}
+
+
+
+
+@media (max-width: 800px){
+    body {
         padding: 20px;
     }
 }
