--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -100,11 +100,16 @@ body {
 .document {
 
 }
-.document em {
+.document i {
     font-style: normal;
     position: relative;
 }
-.document em::before {
+.document hr {
+    border: 0;
+    border-top: 1px dashed #dcdcdc;
+    margin-top: 45px;
+}
+.document i::before {
     content: '';
     background-color: #0242f136;
     width: 100%;
@@ -145,12 +150,64 @@ body {
     line-height: 1.6;
     color: #666;
     margin-bottom: 10px;
-    padding: 20px !important;
+    padding: 15px !important;
     border-left: 4px solid #0243f1;
     background-color: #f9f9f9;
 }
+.document .t_box{
+    padding: 10px;
+    background-color: #f9f9f9;
+    margin-bottom: 10px;
+    color: #666;
+    border-radius: 5px;
+
+}
 
 
+.document .t_table{
+    border: ipx solid #dcdcdc;
+    width: 100%;
+    border-spacing: 0ch;
+    border-collapse: collapse;
+}
+
+.document .t_table tr th{
+    background-color: #f9f9f9;
+}
+.document .t_table tr th,
+.document .t_table tr td{
+    border: ipx solid #dcdcdc;
+    font-weight: normal; 
+    padding: 8px 10px;
+    color: #666;
+}
+.document .t_table.ce{
+    
+}
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+
+    
+    
+    
+    
+    
+  
 
 
 @media (max-width: 800px){
