--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -155,6 +155,7 @@ padding: 400 !important;
     background-color: #f9f9f9;
 }
 .document .t_box{
+    padding: 20px !important;
     padding: 10px;
     background-color: #f9f9f9;
     margin-bottom: 10px;
