--- a/layout/layout04_01.html
+++ b/layout/layout04_01.html
@@ -10,28 +10,52 @@
             width: 1920px;
             margin: 0 auto;
         }
-        #header {
-            width:         ;
+        #container1 {
+            width: 100%;
+            height: 100px;
+            background-color: #B2DFDB;
         }
-        #nav {}
-        #footer {}
+        #container1 .header {
+            width: 100%;
+            height: 100px;
+            background-color: #B2DFDB;
+        }
+        #container2 {
+            width: 100%;
+            height: 300px;
+            background-color: #4DB6AC;
+        }
+        #container2 .nav {}
+        #container3 {
+            width: 100%;
+            height: 580px;
+            background-color: #009688; 
+        }
+        #container3 .section1{}
+        #container4 {
+            width: 100%;
+            height: 100px;
+            background-color: #00796B;
+        }
+        #container4 .footer1{}
+        
     </style>
 </head>
 <body>
     <div id="wrap">
-        <div id="header">
-            <div class="box1"></div>
+        <div id="container1">
+            <div class="header"></div>
         
         </div>
-        <div id="nav">
-            <div class="nav1"></div>
+        <div id="container2">
+            <div class="nav"></div>
           
         </div>
-        <div id="section">
+        <div id="container3">
             <div class="section1"></div> 
           
         </div>
-        <div id="footer">
+        <div id="container4">
             <div class="footer1"></div>
           
         </div>
