--- a/layout/layout02_01.html
+++ b/layout/layout02_01.html
@@ -5,72 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        #body{
+            background-color: #E8F5E9;
+        }
+        #wrap{
+            width: 1200px;
+            margin: 0 auto;
+        }
+        #header{
+            width: 1200px;
+            height: 100px;
+            background-color: #C8E6C9;
+            margin: 0 auto;
+        }
+        #nav{
+            width: 1200px;
+            height: 100px;
+            background-color: #A5D6A7;
+        }
+        #main{
+            width: 1200px;
+            height: 780px;
+            overflow: hidden;
+        }
+        #aside{
+            width: 300px;
+            height: 780px;
+            background-color: #81C784;
+            float: left;  
+        }
+        #section{
+            width: 600px;
+            height: 780px;
+            background-color: #66BB6A;
+            float: left;  
+        }
+        #article{
+            width: 300px;
+            height: 780px;
+            background-color: #4CAF50;
+            float: left; 
+        }
+           
+        #footer{
+            width: 1200px;
+            height: 100px;
+            background-color: #43A047;  
+        }
+        
+        </style>
 </head>
-<style>
-    *{
-        margin: 0;
-        padding: 0;
-    }
-#wrap{
-    width: 1200px;
-    margin: 0 auto;
-}
-#header{
-    width: 1200px;
-    height: 100px;
-    background-color: #C8E6C9;
-    margin: 0 auto;
-}
-#nav{
-    width: 1200px;
-    height: 100px;
-    background-color: #A5D6A7;
-    margin: 0 auto;
-}
-#section{
-    width: 1200px;
-    height: 780px;
-    background-color: #C8E6C9;
-    margin: 0 auto;
-}
-#section .section1{
-    width: 300px;
-    height: 780px;
-    background-color: #81C784;
-    float: left;
-    margin: 0 auto;
-}
-#section .section2{
-    width: 600px;
-    height: 780px;
-    background-color: #66BB6A;
-    float: left;
-    margin: 0 auto;
-}
-#section .section3{
-    width: 300px;
-    height: 780px;
-    background-color: #4CAF50;
-    float: left;
-    margin: 0 auto;
-}
-#footer{
-    width: 1200px;
-    height: 100px;
-    background-color: #43A047;
-    margin: 0 auto;
-    clear: both;
-}
 
-</style>
 <body>
     <div id="wrap">
         <div id="header"></div>
         <div id="nav"></div>
-        <div id="section">
-            <div class="section1"></div>
-            <div class="section2"></div>
-            <div class="section3"></div>
+        <div id="main">
+            <div id="aside"></div>
+            <div id="section"></div>
+            <div id="article"></div>
         </div>
         <div id="footer"></div>
     </div>
@@ -78,9 +76,9 @@
     
 </body>
 </html>
-<!-- layout01_01 float 방식 레이아웃 
-     layout01_02 float 방식 반응형 레이아웃
-     layout01_03 flex 방식 레이아웃
-     layout01_04 flex 방식 반응형 레이아웃
-     layout01_05 grid 방식 레이아웃
-     layout01_06 grid 방식 반응형 레이아웃   -->
+<!-- layout02_01 float 방식 레이아웃 
+     layout02_02 float 방식 반응형 레이아웃
+     layout02_03 flex 방식 레이아웃
+     layout02_04 flex 방식 반응형 레이아웃
+     layout02_05 grid 방식 레이아웃
+     layout02_06 grid 방식 반응형 레이아웃   -->
