--- a/layout/layout03_01.html
+++ b/layout/layout03_01.html
@@ -10,6 +10,9 @@
         margin: 0;
         padding: 0;
     }
+    body{
+        background-color: #E1F5FE;
+    }
     #wrap{
     width: 1200px;
     margin: 0 auto;
@@ -24,30 +27,30 @@
     height: 100px;
     background-color: #81D4FA;
     }
-    #section{
+    #main{
     width: 1200px;
     height: 780px;
-    background-color: #B3E5FC;
+    overflow: hidden;
     }
-    #section .section1{
+    #aside{
     width: 300px;
     height: 780px;
     background-color: #4FC3F7;
     float: left;
     }
-    #section .section2{
+    #article1{
     width: 900px;
     height: 260px;
     background-color: #29B6F6;
     float: left;
     }
-    #section .section3{
+    #article2{
     width: 900px;
     height: 260px;
     background-color: #03A9F4;
     float: left;
     }
-    #section .section4{
+    #article3{
     width: 900px;
     height: 260px;
     background-color: #039BE5;
@@ -64,14 +67,20 @@
     <div id="wrap">
         <div id="header"></div>
         <div id="nav"></div>
-        <div id="section">
-            <div class="section1"></div>
-            <div class="section2"></div>
-            <div class="section3"></div>
-            <div class="section4"></div>
+        <div id="main">
+            <div id="aside"></div>
+            <div id="article1"></div>
+            <div id="article2"></div>
+            <div id="article3"></div>
         </div>
         <div id="footer"></div>
     </div>
     
 </body>
 </html>
+<!-- layout03_01 float 방식 레이아웃 
+     layout03_02 float 방식 반응형 레이아웃
+     layout03_03 flex 방식 레이아웃
+     layout03_04 flex 방식 반응형 레이아웃
+     layout03_05 grid 방식 레이아웃
+     layout03_06 grid 방식 반응형 레이아웃   -->
