--- a/layout/layout04_03.html
+++ b/layout/layout04_03.html
@@ -34,15 +34,29 @@
             height: 100px;
             background-color: #00897B;
         }
+       .container{
+            width: 1200px;
+            height: inherit;
+            background-color: rgba(0,0,0,0.1);
+            margin: 0 auto;
+       }
       
     </style>
 </head>
 <body>
     <div id="wrap">
-        <header id="header"></header>
-        <nav id="nav"></nav>
-        <section id="section"></section>
-        <footer id="footer"></footer>     
+        <header id="header">
+            <div class="container"></div>
+        </header>
+        <nav id="nav">
+            <div class="container"></div>
+        </nav>
+        <section id="section">
+            <div class="container"></div>
+        </section>
+        <footer id="footer">
+            <div class="container"></div>
+        </footer>     
         </div>
     </div>
 </body>
