--- a/layout/layout04_01.html
+++ b/layout/layout04_01.html
@@ -47,3 +47,9 @@
     </div>
 </body>
 </html>
+<!-- layout04_01 float 방식 레이아웃 
+     layout04_02 float 방식 반응형 레이아웃
+     layout04_03 flex 방식 레이아웃
+     layout04_04 flex 방식 반응형 레이아웃
+     layout04_05 grid 방식 레이아웃
+     layout04_06 grid 방식 반응형 레이아웃   -->
