--- a/layout/layout05_01.html
+++ b/layout/layout05_01.html
@@ -38,14 +38,14 @@
             height: 100px;
             background-color:#74574A;
             margin: 0 auto; 
-            float: left; 
+          
         }
         .contents .con2{
             width: 100%;
             height: 200px;
             background-color:#684D43; 
             margin: 0 auto; 
-            float: left; 
+          
         }
         .contents .con3{
             width: 50%;
@@ -92,67 +92,7 @@
             clear: both;
         }
 
-        @media (max-width: 1220px){
-            .container{
-                width: 96%;
-            }
-            .contents .con1{
-                width: 30%;
-                height: 780px;
-            }
-            .contents .con2{
-                width: 70%;
-                height:390px;
-            }
-            .contents .con3{  
-                width: 35%;
-                height:390px;
-            }
-            .contents .con4{
-                width: 35%;
-                height:390px;
-            }
 
-        }                                   
-        @media (max-width: 768px){
-            .container{
-                width: 100%;
-            }
-            .contents .con1{
-                width: 30%;
-                height: 780px;
-            }
-            .contents .con2{
-                width: 70%;
-                height:260px;
-            }
-            .contents .con3{  
-                width: 70%;
-                height:260px;
-            }
-            .contents .con4{
-                width: 70%;
-                height:260px;
-            }
-        }
-        @media (max-width: 480px){
-            .contents .con1{
-                width: 100%;
-                height: 150px;
-            }
-            .contents .con2{
-                width: 100%;
-                height:210px;
-            }
-            .contents .con3{  
-                width: 100%;
-                height:210px;
-            }
-            .contents .con4{
-                width: 100%;
-                height:210px;
-            }
-        }
     </style>
 </head>
 <body>
@@ -181,3 +121,9 @@
    
 </body>
 </html>
+<!-- layout05_01 float 방식 레이아웃 
+     layout05_02 float 방식 반응형 레이아웃
+     layout05_03 flex 방식 레이아웃
+     layout05_04 flex 방식 반응형 레이아웃
+     layout05_05 grid 방식 레이아웃
+     layout05_06 grid 방식 반응형 레이아웃   -->
