--- a/layout/layout05_04.html
+++ b/layout/layout05_04.html
@@ -190,3 +190,9 @@
    
 </body>
 </html>
+<!-- layout05_01 float 방식 레이아웃 
+     layout05_02 float 방식 반응형 레이아웃
+     layout05_03 flex 방식 레이아웃
+     layout05_04 flex 방식 반응형 레이아웃
+     layout05_05 grid 방식 레이아웃
+     layout05_06 grid 방식 반응형 레이아웃   -->
