--- a/layout/lay5for.html
+++ b/layout/lay5for.html
@@ -15,6 +15,8 @@
             width: 1200px;
             height: 100px;
             background-color: rgb(191, 224, 224);
+            text-align: center;
+            line-height: 100px;
         }
         #nav {
             width: 1200px;
@@ -72,8 +74,16 @@
 </head>
 <body>
     <div id="wrap">
-        <div id="header"></div>
-        <div id="nav"></div>
+        <div id="header" class="header_val"></div>
+        <div id="nav">
+            <script>
+                {
+                    for(let i = 1; i <= 13; i++) {
+                        document.write(i);
+                    }
+                }
+            </script>
+        </div>
         <div id="section">
             <div class="aside"></div>
             <div class="content1"></div>
@@ -84,5 +94,14 @@
         </div>
         <div id="footer"></div>
     </div>
+    <script>
+        let result = document.querySelector(".header_val");
+        for(let i = 1; i <= 13; i++) {
+            result.innerHTML += i + " ";
+        }
+        const arr = ['로고','광고'];
+       document.querySelector(".aside").innerHTML = arr[0];
+
+    </script>
 </body>
 </html>
