--- a/layout/layout05_05.html
+++ b/layout/layout05_05.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-       
-        #wrap{ 
-            width: 1200px;
-            margin: 0 auto;
-           }
-           
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        
         #header{
             width: 100%;
             height: 100px;
