--- a/javascript/assets/css/quiz.css
+++ b/javascript/assets/css/quiz.css
@@ -178,6 +178,7 @@ body {
 .quiz__answer .result {
     width: 100%;
     font-size: 22px;
+    line-height: 1.3;
     padding: 13px 20px;
     border: 6px ridge #cacaca;
     box-sizing: border-box;
@@ -238,6 +239,51 @@ body {
     opacity: 1;
     animation: wobble 0.6s;
 }
+.quiz__selects {
+margin: 5px 0px;
+}
+.quiz__selects label {
+    display: flex;
+}
+.quiz__selects label input{
+position: absolute;
+left: -9999px;
+}
+.quiz__selects label span {
+font-style: 20px;
+line-height: 1.3;
+font-family: "Cafe24Dangdanghae";
+padding: 10px 30px 10px 20px;
+display: flex;
+align-items: center;
+width: 100%;
+border-radius: 5px;
+cursor: pointer;
+
+}
+.quiz__selects label span::before {
+    content: '';
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #fff;
+    margin-right: 15px;
+    display: flex;
+    flex-shrink: 0;
+    box-shadow: inset 0px 0px 0px 4px #6fa30b;
+    transition: all 0.25s;
+}
+.quiz__selects label input:checked + span { 
+    background-color: #f5ffe7;
+
+}
+.quiz__selects label input:checked + span::before {
+box-shadow: inset 0px 0px 0px 10px #6fa30b;
+}
+
+
+
+
 
 @keyframes wobble {
     0% {
