--- a/layout/layout01_04.html
+++ b/layout/layout01_04.html
@@ -13,8 +13,9 @@
     <style>
         *{
             margin: 0;
+            padding: 0;
         } 
-        /* 확인필요 */
+     
         #body{
             background-color:#FFE0B2
         }
@@ -81,7 +82,7 @@
                 height: 480px;
             }
         }
-        /* 확인필요 */
+   
 
 
     </style>
