--- a/layout/layout01_05.html
+++ b/layout/layout01_05.html
@@ -13,8 +13,9 @@
     <style>
         *{
             margin: 0;
+            padding: 0;
         } 
-        /* 확인필요 */
+    
         #body{
             background-color:#FFE0B2
         }
@@ -54,7 +55,7 @@
             background-color:#FF9800; 
             grid-area: footer;   
         }  
-        /* 확인필요 */
+       
 
 
     </style>
