--- a/layout/layout01_06.html
+++ b/layout/layout01_06.html
@@ -13,8 +13,9 @@
     <style>
         *{
             margin: 0;
+            padding: 0;
         } 
-        /* 확인필요 */
+       
         #body{
             background-color:#FFE0B2
         }
@@ -82,9 +83,6 @@
                 grid-template-rows: 100px 100px 165px 315px 100px;
             }
         }
-
-       
-        /* 확인필요 */
 
 
     </style>
