--- a/layout/layout02_04.html
+++ b/layout/layout02_04.html
@@ -59,12 +59,13 @@
         }
         }
         
-        @media(max-width: 768px) {
+        @media(max-width: 768px) { 
         #wrap {
             width: 100%;
         }
         #main{
             flex-wrap: wrap;
+            /* 사이즈에 맞게 줄바꿈 */
         }
         #aside{
             width: 30%;
