--- a/layout/layout03_02.html
+++ b/layout/layout03_02.html
@@ -18,6 +18,7 @@
     margin: 0 auto;
     }
     #header{
+        /* width: 100%;  생략이 가능함 */
     height: 100px;
     background-color: #B3E5FC;
     }
@@ -26,8 +27,8 @@
     background-color: #81D4FA;
     }
     #main{
-    height: 780px;
-    overflow: hidden;
+   
+    
     }
     #aside{
     width: 30%;
