--- a/layout/layout01_01.html
+++ b/layout/layout01_01.html
@@ -13,8 +13,9 @@
     <style>
         *{
             margin: 0;
+            padding: 0;
         } 
-        /* 확인필요 */
+      
         #body{
             background-color:#FFE0B2
         }
@@ -53,8 +54,7 @@
         }
 
         
-        /* 확인필요 */
-
+       
 
     </style>
 </head>
