--- a/layout/layout01_02.html
+++ b/layout/layout01_02.html
@@ -13,8 +13,9 @@
     <style>
         *{
             margin: 0;
+            padding: 0;
         } 
-        /* 확인필요 */
+      
         #body{
             background-color:#FFE0B2
         }
@@ -79,7 +80,7 @@
         }
 
         
-        /* 확인필요 */
+        
 
 
     </style>
