--- a/layout/layout02_06.html
+++ b/layout/layout02_06.html
@@ -60,7 +60,8 @@
             #main{
                 grid-template-areas: 
                 "aside section"
-                "article article";
+                "article article"
+                ;
                 grid-template-columns: 30% 70%;
                 grid-template-rows: 680px 150px;
             }
