--- a/layout/layout05_02.html
+++ b/layout/layout05_02.html
@@ -31,7 +31,7 @@
             height: 780px;
             background-color:#886F65;
             margin: 0 auto; 
-            overflow: hidden;   
+            /* overflow: hidden;    */
         }
         .contents .con1{
             width: 100%;
