--- a/layout/layout05_03.html
+++ b/layout/layout05_03.html
@@ -18,19 +18,19 @@
             width: 100%;
             height: 100px;
             background-color:#EEEBE9;
-            margin: 0 auto;
+           
         }
         #nav{
             width: 100%;
             height: 100px;
             background-color:#B9AAA5;
-            margin: 0 auto;
+          
         }
         #main{
             width: 100%;
             height: 780px;
             background-color:#886F65;
-            margin: 0 auto; 
+           
         }
         .contents {
             display: flex;
@@ -77,25 +77,7 @@
             margin: 0 auto; 
             background-color: rgba(0,0,0,0.3);
         }
-       /* float으로 인한 깨짐방지
-            깨진영역 clear:both
-            부모영역에  overflow: hidden
-            clearfix
-
-        */
-        .clearfix::before{
-            zoom: 1;
-        }
-        .clearfix::before,
-        .clearfix::after{
-            content:'' ;
-            display: block;
-            line-height: 0;
-        }
-        .clearfix::after{
-            clear: both;
-        }
-
+       
        
     </style>
 </head>
@@ -104,13 +86,13 @@
         <div id="header">
             <div class="container"></div>
         </div>
-        
+         
         <div id="nav">
             <div class="container"></div>
         </div>
 
         <div id="main">
-            <div class="contents container clearfix">
+            <div class="contents container">
                 <div class="con1"></div>
                 <div class="con2"></div>
                 <div class="con3"></div>
