--- a/layout/layout05_04.html
+++ b/layout/layout05_04.html
@@ -18,19 +18,19 @@
             width: 100%;
             height: 100px;
             background-color:#EEEBE9;
-            margin: 0 auto;
+           
         }
         #nav{
             width: 100%;
             height: 100px;
             background-color:#B9AAA5;
-            margin: 0 auto;
+           
         }
         #main{
             width: 100%;
             height: 780px;
             background-color:#886F65;
-            margin: 0 auto; 
+           
         }
         .contents {
          
@@ -63,21 +63,21 @@
             width: 50%;
             height: 480px;
             background-color:#594139; 
-            margin: 0 auto; 
+          
    
         }
         .contents .right .con4{
             width: 50%;
             height: 480px;
             background-color:#6a534c; 
-            margin: 0 auto; 
+           
        
         }
         #footer{
             width: 100%;
             height: 100px;
             background-color:#4E342E;
-            margin: 0 auto; 
+           
         }
         .container{
             width: 1200px;
@@ -121,8 +121,6 @@
             .contents .right{
                 width: 70%;
                 height: 780px;
-                display: flex;
-                flex-wrap: wrap;
             }
             .contents .right .con2{
                 width: 100%;
@@ -166,6 +164,7 @@
         @media (max-width: 480px){
             .contents{
                 flex-wrap: wrap;
+                /* 사이즈에 맞게 변형됨 */
             }
             .contents .left{
                 width: 100%;
