--- a/css/assets/css/style.css
+++ b/css/assets/css/style.css
@@ -109,14 +109,50 @@ body {
     margin: 200px 20px;
     border: 4px solid var(--brown);
     background-color: var(--bgSub);
-    padding: 80px;
+    padding: 120px 80px 80px 80px;
+    position: relative;
+    border-radius: 30px;
+    overflow: hidden;
 }
+.main__desc .deco{
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%);
+    padding-top: 10px;
+    white-space: nowrap;
+    width: 90%;
+    overflow: hidden;
+}
+.main__desc .deco span{
+    width: 30px;
+    height: 30px;
+    border: 10px solid var(--brown);
+    border-radius: 50%;
+    box-sizing: border-box;
+    background-color: var(--bgMain);
+    display: inline-block;
+    margin: 0 1%;
+    position: relative;
+}
+.main__desc .deco span::after{
+    content: '';
+    width: 10px;
+    height: 10px;
+    background-color: var(--brown);
+    position: absolute;
+    left: 0;
+    top: -20px;
+
+}
+
 .main__desc .title {
-    display: flex;
+   
     justify-content: space-between;
     margin-bottom: 2rem;
 }
 .main__desc .title h2 {
+    display: inline-block;
     width: 35%;
     border: 4px solid var(--brown);
     font-size: 2rem; /* 44px */
@@ -138,11 +174,32 @@ body {
     border-right: 4px solid var(--brown);
 }
 .main__desc .title p {
-    width: 60%;
+  
     font-family: var(--fontSub);
     font-size: 1.3rem;
     line-height: 1.3;
     color: var(--brown);
+    
+}
+.main__desc .subTitle ul {
+    overflow:hidden;
+}
+.main__desc .subTitle li {
+ float: left;
+ margin-right: -4px;
+ margin-bottom: -4px;
+}
+.main__desc .subTitle li a {
+font-size: 0.8rem;
+font-family: var(--fontDocs);
+border: 4px solid var(--brown);
+padding: 0.5em 1em;
+display: inline-block;
+
+}
+.main__desc .subTitle li.active a {
+    background-color: var(--brown);
+    color: var(--white);
 }
 
 .main__desc .table {
@@ -160,9 +217,16 @@ body {
     padding: 10px;
     text-align: center;
 }
+.main__desc .table tr td:nth-child(2){
+   
+}
 .main__desc .table tr td:nth-child(3){
     text-align: left;
 }
+.main__desc .table .rowTable{
+    text-align: left;
+}
+.m
 .main__desc .table tr td span {
     font-size: 16px;
     padding-top: 4px;
