--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -102,6 +102,31 @@ body {
 .main_sample .result {
     margin-bottom: 80px;
 }
+/* sample */
+.sampe {
+    margin-bottom: 80px;
+}
+.sample .table{
+    margin-bottom: 10px;
+}
+.sample .table table {
+    width: 100%;
+    border: 1px solid#e6e6e6;
+    text-align: center;
+}
+.sample .table table tr th{
+    font-weight: normal;
+    border: 1px solid #f5f5f5;
+    padding: 3px;
+}
+.sample .table table tr td{
+    border: 1px solid #e6e6e6;
+    padding: 3px;
+}
+.sample .table table tr td[class*="_P"] {
+    background: #000;
+}
+
 
 /* 티스토리용 문서 */
 .document i {
