--- a/javascript/assets/css/quiz.css
+++ b/javascript/assets/css/quiz.css
@@ -3,17 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
+*, *:before, *:after {
+    box-sizing:border-box;
 }
-
 a {
     text-decoration: none;
 }
-
 body {
     background-color: #f6f6f6;
     background-image:
@@ -28,7 +23,6 @@ body {
         linear-gradient(#cdcccc, #cdcccc);
     background-size: 100px 100%, 100% 100px, 100% 10px, 10px 100%, 100% 100px, 100px 100%, 100px 100%, 100px 100px, 100px 100px;
 }
-
 #header {
     background: #262626;
     color: #fff;
@@ -39,7 +33,6 @@ body {
     position: relative;
     z-index: 10;
 }
-
 #header::before {
     content: "";
     border: 4px ridge #a3a3a3;
@@ -51,49 +44,43 @@ body {
     box-sizing: border-box;
     z-index: -1;
 }
-
 #header h1 {
     padding: 3px 3px 6px 10px;
     font-family: "DungGeunMo";
     font-size: 30px;
 }
-
+#header h1 a {
+    color: #fff;
+}
 #header h1 em {
     font-size: 16px;
     font-style: normal;
 }
-
-@media(max-width: 600px) {
+@media (max-width: 600px){
     #header h1 em {
         display: none;
     }
 }
-
 #header nav {
     padding-right: 10px;
 }
-
 #header nav li {
     display: inline;
 }
-
 #header nav li a {
     color: #fff;
     padding: 0 10px;
     border: 1px dashed #fff;
     font-family: "DungGeunMo";
 }
-
 #header nav li.active a {
     color: #000;
     background: #fff;
 }
-
 #footer {
     background: #fff;
     text-align: center;
     padding: 20px;
-    position: absolute;
     width: 100%;
     box-sizing: border-box;
     margin-top: 150px;
@@ -102,12 +89,10 @@ body {
     bottom: 0;
     z-index: 10000;
 }
-
 #footer a {
     color: #000;
     font-family: "DungGeunMo";
 }
-
 #footer a:hover {
     text-decoration: underline;
 }
@@ -116,22 +101,18 @@ body {
 .quiz__wrap {
     display: flex;
     align-items: flex-start;
-    align-items: center;
     justify-content: center;
     margin-top: 50px;
     margin-bottom: 150px;
     flex-wrap: wrap;
 }
-
 .quiz {
     max-width: 500px;
-
     width: 100%;
     background-color: #fff;
     border: 8px ridge #cacaca;
     margin: 10px;
 }
-
 .quiz__type {
     background-color: #cacaca;
     text-align: center;
@@ -142,7 +123,6 @@ body {
     font-family: "DungGeunMo";
     padding: 4px;
 }
-
 .quiz__question {
     border-top: 6px ridge #cacaca;
     border-bottom: 6px ridge #cacaca;
@@ -150,21 +130,17 @@ body {
     font-family: "Cafe24Dangdanghae";
     line-height: 1.3;
 }
-
 .quiz__question .number {
     color: rgb(245, 32, 32)
 }
-
 .quiz__question .ask {
     display: inline;
 }
-
 .quiz__answer {
     border-top: 6px ridge #cacaca;
     padding: 10px;
     background-color: #f5f5f5;
 }
-
 .quiz__answer .confirm {
     border: 6px ridge #cacaca;
     width: 100%;
@@ -174,7 +150,6 @@ body {
     font-family: "Cafe24Dangdanghae";
     cursor: pointer;
 }
-
 .quiz__answer .result {
     width: 100%;
     font-size: 22px;
@@ -184,7 +159,6 @@ body {
     box-sizing: border-box;
     text-align: center;
     font-family: "Cafe24Dangdanghae";
-
 }
 .quiz__answer .input {
     width: 100%;
@@ -193,21 +167,19 @@ body {
     padding: 13px 20px;
     background-color: #fff;
     font-family: "Cafe24Dangdanghae";
-    margin-top: 10px;
+    margin-bottom: 10px;
 }
-
 .quiz__view {
     background-color: #f5f5f5;
     font-family: "Cafe24Dangdanghae";
     position: relative;
     overflow: hidden;
 }
-
 .quiz__view .true {
     width: 120px;
     height: 120px;
     line-height: 120px;
-    background-color: #F5534F;
+    background-color: #f5534f;
     color: #fff;
     border-radius: 50%;
     text-align: center;
@@ -216,7 +188,6 @@ body {
     top: 100px;
     opacity: 0;
 }
-
 .quiz__view .false {
     width: 120px;
     height: 120px;
@@ -229,37 +200,34 @@ body {
     top: 100px;
     opacity: 0;
 }
-
 .quiz__view.like .true {
     opacity: 1;
     animation: wobble 0.6s;
 }
-
 .quiz__view.dislike .false {
     opacity: 1;
     animation: wobble 0.6s;
 }
 .quiz__selects {
-margin: 5px 0px;
+    margin: 5px 0;
 }
 .quiz__selects label {
     display: flex;
 }
-.quiz__selects label input{
-position: absolute;
-left: -9999px;
+.quiz__selects label input {
+    position: absolute;
+    left: -9999px;
 }
 .quiz__selects label span {
-font-style: 20px;
-line-height: 1.3;
-font-family: "Cafe24Dangdanghae";
-padding: 10px 30px 10px 20px;
-display: flex;
-align-items: center;
-width: 100%;
-border-radius: 5px;
-cursor: pointer;
-
+    font-size: 20px;
+    line-height: 1.3;
+    font-family: "Cafe24Dangdanghae";
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
 }
 .quiz__selects label span::before {
     content: '';
@@ -273,89 +241,78 @@ cursor: pointer;
     box-shadow: inset 0px 0px 0px 4px #6fa30b;
     transition: all 0.25s;
 }
-.quiz__selects label input:checked + span { 
+.quiz__selects label input:checked + span {
     background-color: #f5ffe7;
-
 }
 .quiz__selects label input:checked + span::before {
-box-shadow: inset 0px 0px 0px 10px #6fa30b;
+    box-shadow: inset 0px 0px 0px 10px #6fa30b;
 }
-
-
-
+.quiz__confirm {
+    width: 100%;
+    text-align: center;
+}
+.quiz__confirm .check {
+    font-size: 22px;
+    line-height: 1.3;
+    padding: 13px 60px;
+    border: 6px ridge #cacaca;
+    box-sizing: border-box;
+    text-align: center;
+    font-family: "Cafe24Dangdanghae";
+    cursor: pointer;
+    margin: 40px 0;
+    transition: background 0.3s;
+}
+.quiz__confirm .check:hover {
+    background: #f5524f58;
+}
 
 
 @keyframes wobble {
-    0% {
-        transform: translateX(0) rotate(0deg)
-    }
-
-    15% {
-        transform: translateX(-25%) rotate(-5deg)
-    }
-
-    30% {
-        transform: translateX(20%) rotate(3deg)
-    }
-
-    45% {
-        transform: translateX(-15%) rotate(-3deg)
-    }
-
-    60% {
-        transform: translateX(10%) rotate(2deg)
-    }
-
-    75% {
-        transform: translateX(-5%) rotate(1deg)
-    }
-
-    100% {
-        transform: translateX(0%) rotate(0deg)
-    }
-
+    0%   {transform: translateX(0) rotate(0deg)}
+    15%  {transform: translateX(-25%) rotate(-5deg)}
+    30%  {transform: translateX(20%) rotate(3deg)}
+    45%  {transform: translateX(-15%) rotate(-3deg)}
+    60%  {transform: translateX(10%) rotate(2deg)}
+    75%  {transform: translateX(-5%) rotate(-1deg)}
+    100% {transform: translateX(0) rotate(0deg)}
 }
 
+
 /* dog */
-.dog .tail,
-.dog .chin,
-.dog .tongue::before,
-.dog .tongue::after,
-.dog .mouth,
-.dog .nose,
-.dog .teardrop,
-.dog .eyes,
-.dog .face::before,
-.dog .face::after,
-.dog .ears::before,
+.dog .tail, 
+.dog .chin, 
+.dog .tongue::before, 
+.dog .tongue::after, 
+.dog .mouth, 
+.dog .nose, 
+.dog .teardrop, 
+.dog .eyes, 
+.dog .face::before, 
+.dog .face::after, 
+.dog .ears::before, 
 .dog .ears::after {
     transition: 0.2s ease-in;
 }
-
 .dog {
     padding-top: 50px;
 }
-
 .dog .head,
 .dog .body {
     position: relative;
     width: 115px;
 }
-
 .dog .head {
     height: 115px;
     border-radius: 50% 50% 0 0;
     margin: 0 auto;
 }
-
 .dog .ears {
     position: relative;
     top: -14%;
     width: 100%;
 }
-
-.dog .ears::before,
-.dog .ears::after {
+.dog .ears::before, .dog .ears::after {
     content: "";
     position: absolute;
     top: 0;
@@ -366,17 +323,14 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     border-left: 7px solid #F7AA2B;
     border-right: 7px solid #F7AA2B;
 }
-
 .dog .ears::before {
     left: 0;
     border-radius: 50% 45% 0 0;
 }
-
 .dog .ears::after {
     right: 0;
     border-radius: 45% 50% 0 0;
 }
-
 .dog .face {
     position: absolute;
     background: #F7AA2B;
@@ -384,22 +338,18 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     height: 100%;
     border-radius: 50% 50% 0 0;
 }
-
-.dog .face::before,
-.dog .face::after {
+.dog .face::before, .dog .face::after {
     content: "";
     display: block;
     margin: auto;
     background: #FEFEFE;
 }
-
 .dog .face::before {
     width: 15px;
     height: 35px;
     margin-top: 24px;
     border-radius: 20px 20px 0 0;
 }
-
 .dog .face::after {
     position: absolute;
     bottom: -1px;
@@ -409,15 +359,12 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     height: 65px;
     border-radius: 45% 45% 0 0;
 }
-
 .dog .eyes {
     position: relative;
     top: 29%;
     text-align: center;
 }
-
-.dog .eyes::before,
-.dog .eyes::after {
+.dog .eyes::before, .dog .eyes::after {
     content: "";
     display: inline-block;
     width: 12px;
@@ -426,7 +373,6 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     background: #451d1c;
     margin: 0 14.5%;
 }
-
 .dog .teardrop {
     position: absolute;
     top: 125%;
@@ -438,7 +384,6 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     background: #FEFEFE;
     visibility: hidden;
 }
-
 .dog .nose {
     position: relative;
     top: 35%;
@@ -448,7 +393,6 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     background: #451d1c;
     margin: auto;
 }
-
 .dog .mouth {
     position: relative;
     top: 34.5%;
@@ -458,9 +402,7 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     text-align: center;
     background: #451d1c;
 }
-
-.dog .mouth::before,
-.dog .mouth::after {
+.dog .mouth::before, .dog .mouth::after {
     content: "";
     position: absolute;
     top: -4px;
@@ -472,26 +414,20 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     border-top-color: transparent;
     z-index: 2;
 }
-
 .dog .mouth::before {
     transform: translateX(-89%) rotate(45deg);
 }
-
 .dog .mouth::after {
     transform: translateX(-2px) rotate(45deg);
 }
-
 .dog .tongue {
     position: relative;
     z-index: 1;
 }
-
-.dog .tongue::before,
-.dog .tongue::after {
+.dog .tongue::before, .dog .tongue::after {
     content: "";
     position: absolute;
 }
-
 .dog .tongue::before {
     top: 10px;
     left: -7px;
@@ -501,7 +437,6 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     background: #451d1c;
     z-index: -1;
 }
-
 .dog .tongue::after {
     top: 14px;
     left: -4px;
@@ -511,7 +446,6 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     background: #F5534F;
     z-index: 5;
 }
-
 .dog .chin {
     position: relative;
     top: 47.5%;
@@ -524,16 +458,13 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     border-radius: 2px;
     z-index: 0;
 }
-
 .dog .body {
     position: relative;
     height: 139px;
     margin: auto;
     z-index: 0;
 }
-
-.dog .body::before,
-.dog .body::after {
+.dog .body::before, .dog .body::after {
     content: "";
     position: absolute;
     top: -1px;
@@ -545,14 +476,12 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     margin: auto;
     background: #F7AA2B;
 }
-
 .dog .body::after {
     top: -2px;
     bottom: -1px;
     width: 60px;
     background: #FEFEFE;
 }
-
 .dog .tail {
     position: absolute;
     left: -60%;
@@ -566,7 +495,6 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     z-index: -2;
     animation: movetail 0.1s linear infinite alternate forwards;
 }
-
 .dog .legs {
     position: absolute;
     bottom: 0;
@@ -576,42 +504,34 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     background: #F7AA2B;
     border-radius: 10px 10px 0 0;
 }
-
-.dog .legs::before,
-.dog .legs::after {
+.dog .legs::before, .dog .legs::after {
     content: "";
     position: absolute;
     bottom: 1px;
     background: #CB7A1D;
     z-index: -1;
 }
-
 .dog .legs::before {
     left: -7.5%;
     width: 115%;
     height: 55%;
     border-radius: 5px 5px 0 0;
 }
-
 .dog .legs::after {
     left: -3.5%;
     width: 107%;
     height: 250%;
     border-radius: 20px 20px 35px 35px;
 }
-
 .like .dog .face::before {
     margin-top: 10px;
 }
-
-.like .dog .face::after {
+.like .dog .face::after{
     height: 85px;
 }
-
 .like .dog .eyes {
     top: 13%;
 }
-
 .like .dog .eyes::before,
 .like .dog .eyes::after {
     width: 18px;
@@ -620,57 +540,44 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     transform: rotate(-37.5deg);
     border-radius: 20px;
 }
-
 .like .dog .eyes::after {
     transform: rotate(37.5deg);
 }
-
 .like .dog .nose {
     top: 18%;
 }
-
 .like .dog .mouth {
     top: 16.5%;
 }
-
 .like .dog .tongue::before {
     height: 12px;
 }
-
 .like .dog .tongue::after {
     height: 24px;
     animation: movetongue 0.1s linear 0.35s infinite alternate forwards;
 }
-
 .like .dog .chin {
     top: 34%;
 }
-
 .like .dog .tail {
     animation: movetail 0.1s linear infinite alternate forwards;
 }
-
 .dislike .dog .ears::before {
     transform: rotate(-50deg) translate(-7px, 2px);
 }
-
 .dislike .dog .ears::after {
     transform: rotate(50deg) translate(7px, 2px);
 }
-
 .dislike .dog .face::before {
     margin-top: 28px;
 }
-
 .dislike .dog .face::after {
     height: 55px;
 }
-
 .dislike .dog .eyes {
     top: 38%;
 }
-
-.dislike .dog .eyes::before,
+.dislike .dog .eyes::before, 
 .dislike .dog .eyes::after {
     width: 18px;
     height: 5px;
@@ -678,50 +585,32 @@ box-shadow: inset 0px 0px 0px 10px #6fa30b;
     transform: rotate(-37.5deg);
     border-radius: 20px;
 }
-
 .dislike .dog .eyes::after {
     transform: rotate(37.5deg);
 }
-
 .dislike .dog .teardrop {
     animation: cry 0.1s ease-in 0.25s forwards;
 }
-
 .dislike .dog .nose {
     top: 44%;
 }
-
 .dislike .dog .mouth {
     top: 42%;
 }
-
 .dislike .dog .chin {
     top: 52%;
 }
-
 .dislike .dog .tail {
     transform: rotate(0);
     animation: none;
 }
-
 @keyframes movetongue {
-    100% {
-        height: 27px;
-    }
+    100% {height: 27px;}
 }
-
 @keyframes movetail {
-    0% {
-        transform: rotate(37deg);
-    }
-
-    100% {
-        transform: rotate(52deg);
-    }
+    0% {transform: rotate(37deg);}
+    100% {transform: rotate(52deg);}
 }
-
 @keyframes cry {
-    100% {
-        visibility: visible;
-    }
+    100% {visibility: visible;}
 }
