--- a/javascript/assets/css/search.css
+++ b/javascript/assets/css/search.css
@@ -151,6 +151,19 @@ li {
     display: none;
 }
 
+.search__info {
+    text-align: right;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    border-bottom: 2px dashed var(--htmlColor);
+}
+
+.search__info .type {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+
 @media (max-width: 600px) {
     .search__wrap {
         padding: 20px;
